--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Clínica Eli</h1>
+            <h1>Implantes</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Materiais</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores veritatis dolore obcaecati, beatae, ex maxime consectetur porro eligendi aut ad dolor illo minus exercitationem enim molestiae voluptas. Praesentium, cumque ab?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Prótese</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas odit, ipsam sunt perferendis vero quaerat illo, recusandae commodi dolorem reprehenderit aspernatur incidunt facere minus corporis voluptatem temporibus laborum quam quisquam.</p>
         </article>
     </main>
 </body>
