--- a/Index.html
+++ b/Index.html
@@ -9,15 +9,21 @@
 <body>
     <main>
         <header>
-            <h1>Implantes</h1>
+            <img width="40" height="20" class= "lado_left" src="imagens/Logo17.jpg" alt="Logo Clínica ELI">
+            <h1 style="text-align:center">
+                Clínica ELI - Serviços </h1>
         </header>
         <article>
-            <h2>Materiais</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores veritatis dolore obcaecati, beatae, ex maxime consectetur porro eligendi aut ad dolor illo minus exercitationem enim molestiae voluptas. Praesentium, cumque ab?</p>
+            <h2>Implantes Dentários</h2>
+            <img class= "lado_right"  width="200" height="100" src="imagens/ClinicaEli-Implante.jpg" alt="Implantes Dentários">
+            <p>Implantes dentários são suportes ou estruturas de metal (geralmente de titânio) colocadas cirurgicamente no osso maxilar logo abaixo da gengiva para substituir as raízes dentárias. Uma vez colocados, permitem ao dentista colocar dentes substitutos sobre eles.</p>
         </article>
         <article>
-            <h2>Prótese</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas odit, ipsam sunt perferendis vero quaerat illo, recusandae commodi dolorem reprehenderit aspernatur incidunt facere minus corporis voluptatem temporibus laborum quam quisquam.</p>
+            <h2>Prótese Dentária</h2>
+            <img class= "lado_right" 
+            width="200" height="100"
+            src="imagens/ClinicaEli-Prótese.jpg" alt="Prótese Dentária">
+            <p>São elementos dentários danificados ou perdidos, devolvendo ao paciente as características e funções mastigatórias, estéticas e fonéticas, além de recompor e proteger funções articulares.</p>
         </article>
     </main>
 </body>
