--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <img width="40" height="20" class= "lado_left" src="imagens/Logo17.jpg" alt="Logo Clínica ELI">
+            <img width="40" height="20" class= "lado_left" src="imagens/Logo17.jpg" alt="Logo Clínica ELI 1">
             <h1 style="text-align:center">
                 Clínica ELI - Serviços </h1>
         </header>
